Doubly linked list.

--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,8 @@
 body {
   max-width: 800px;
   margin: auto;
-  padding: 0.2em;
+  padding: .2em;
   line-height: 1.5em;
-  font-family: "Kreon Light", "Gentium Book Basic", Kreon, Georgia,
-    "Times New Roman", Times, serif;
 }
 
 /* Table of Contents, if wanted
@@ -17,20 +15,16 @@ output:
 
     */
 
-#TableOfContents,
-#TOC {
+#TableOfContents, #TOC {
   border: 1px solid #eee;
   border-radius: 5px;
 }
 
 /* Header and Footer */
-.menu li {
-  display: inline-block;
-}
-.article-meta,
-.menu a {
+.menu li { display: inline-block; }
+.article-meta, .menu a {
   text-decoration: none;
-  background: #e8dbc5;
+  background: #E8DBC5;
   color: #000;
   padding: 5px;
   border-radius: 5px;
@@ -39,52 +33,20 @@ output:
   margin-bottom: 20px;
 }
 
-.terms {
-  font-size: 0.9em;
-}
-.menu,
-.article-meta,
-footer {
-  text-align: center;
-}
-
-h1 {
-  animation: moveInTop 1.5s ease-out;
-}
-
-.title {
-  font-family: "Gentium Book Basic", "Kreon Light", Kreon, Georgia, 'Times New Roman', Times, serif;
-  font-size: 1.1em;
-}
-
-@keyframes moveInTop {
-  0% {
-    opacity: 0;
-    transform: translateY(-16px);
-  }
-  80% {
-    opacity: 0.8;
-    transform: translateY(4px);
-  }
-  100% {
-    opacity: 1;
-    transform: translate(0);
-  }
-}
-
-footer a {
-  text-decoration: none;
-}
+.terms { font-size: .9em; }
+.menu, .article-meta, footer { text-align: center; }
+.title { font-size: 1.1em; }
+footer a { text-decoration: none; }
 
 .pull-left {
-  float: left;
+    float: left
 }
 .pull-right {
-  float: right;
+    float: right
 }
 
 a {
-  color: #613dc1;
+  color: #613DC1;
   text-decoration: none;
 }
 
@@ -94,32 +56,32 @@ a:hover {
 
 /* Adjust background at your leisure! */
 header {
-  position: relative;
-  width: 100%;
-  height: 1.75rem;
-  font-size: 1rem;
-  background: #613dc1;
-  border-bottom: 1px solid #000;
+    position: relative;
+    width: 100%;
+    height: 1.75rem;
+    font-size: 1rem;
+    background: #613DC1;
+    border-bottom: 1px solid #000;
 }
 
 header ul,
 header ol {
-  margin: 0;
-  padding: 0;
-  list-style: none;
+    margin: 0;
+    padding: 0;
+    list-style: none
 }
 header nav {
-  padding: 0 0.5rem;
+    padding: 0 0.5rem
 }
 
 header a {
-  color: #fff;
-  line-height: 1.75rem;
-  padding: 0 0.5rem;
+    color: #fff;
+    line-height: 1.75rem;
+    padding: 0 0.5rem
 }
 header a:hover,
 header .current a {
-  color: #fff;
+    color: #fff
 }
 
 /* Code Boxes */
@@ -130,17 +92,11 @@ pre {
   padding: 1em;
   overflow-x: auto;
 }
-code {
-  background: #f9f9f9;
-}
-pre code {
-  background: none;
-}
+code { background: #f9f9f9; }
+pre code { background: none; }
 
 /* Images, tables, misc. */
-img,
-iframe,
-video {
+img, iframe, video {
   max-width: 100%;
   height: auto;
 }
@@ -168,16 +124,9 @@ table {
   border-top: 1px solid #666;
   border-bottom: 1px solid #666;
 }
-table thead th {
-  border-bottom: 1px solid #ddd;
-}
-th,
-td {
-  padding: 5px;
-}
-tr:nth-child(even) {
-  background: #eee;
-}
+table thead th { border-bottom: 1px solid #ddd; }
+th, td { padding: 5px; }
+tr:nth-child(even) { background: #eee }
 
 .content-wrapper {
   padding: 0px 12px 0px 12px;
@@ -188,11 +137,4 @@ tr:nth-child(even) {
   float: right;
   padding: 10px;
   display: block;
-}
-
-p > code {
-  background-color: #ece5f0;
-}
-li > code {
-  background-color: #ece5f0;
 }
